--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Yusupu Ainiwaer"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  location         : "Wurumqi, China"
   employer         : "Red Brick University"
   uri              : # URL
   email            : "none@example.org" 
