--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Yusupu Ainiwaer"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "MS studen"
   location         : "Urumqi, China"
   # employer         : "Red Brick University"
   uri              : # URL
