--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "Yusupuedu/Yusupuedu.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "images/profile.png"
+  avatar           : "profile.png"
   name             : "Yusupu Ainiwaer"
   pronouns         :  "he/him"  
   bio              : "MS student at Xinjiang University"
